Fix running test